@@ -31,6 +31,9 @@ x review the header files
 
 x get rid of ham_dump - no longer needed
 
+x what happens with a page that is deleted (flag DELETE_PENDING), after 
+    txn_commit or txn_abort were called?
+
 o do a complete source code review
     (and while reviewing, make sure that all parts are covered by unittests)
     x mem.c
@@ -55,18 +58,34 @@ o do a complete source code review
     x btree_insert.c
     x btree_cursor.c
     o btree_erase.c
+        o collapse root
+        o negative erase (-> key_not_found)
+        o merge page w. right sibling
+        o merge page w. left sibling
+        o shift to left sibling
+        o shift to right sibling
+        o shift from left sibling
+        o shift from right sibling
+        o zeile 610: immer false -> assert
+        o remove #if 0...
+
+o when do we use traces, when do we use normal output? should we add more
+    traces, i.e. in case of invalid parameters?
+    x both should ALWAYS compile
+    x the error handler receives a "level"; the default handler prints 
+        everything in DEBUG mode, and only the normal messages in release mode
+        ham_trace: DEBUG level
+        ham_log: normal warning level
+        a custom handler could print anything whenever it wants to
+    x review all logs/traces: unexpected errors -> traces; everything else: log
+    o add a ham_trace call for each HAM_INV_PARAMETER error (and most other
+        errors, if it makes sense for the caller)
 
 o review the cache routines; when is the page-counter incremented or
     decremented, and how long does it usually take till a page is unloaded,
     because it's too old?
     to we need these counters? we can check the age of a page through
     the transaction id
-
-o what happens with a page that is deleted (flag DELETE_PENDING), after 
-    txn_commit or txn_abort were called?
-
-o when do we use traces, when do we use normal output? should we add more
-    traces, i.e. in case of invalid parameters?
 
 o enhance the tutorial
     doc rule: one sentence - no point; two sentences: make a point
