@@ -23,11 +23,19 @@ extern "C" {
 #include <ham/types.h>
 
 /**
+ * Debug output levels
+ */
+#define DBG_LVL_DEBUG       0
+#define DBG_LVL_NORMAL      1
+#define DBG_LVL_FATAL       3
+
+/**
  * function prototypes
  */
 extern void dbg_lock(void);
 extern void dbg_unlock(void);
-extern void dbg_prepare(const char *file, int line, const char *expr);
+extern void dbg_prepare(int level, const char *file, int line, 
+        const char *expr);
 extern void dbg_log(const char *format, ...);
 extern void dbg_verify_failed(const char *format, ...);
 
@@ -46,35 +54,38 @@ extern void (*ham_test_abort)(void);
  * otherwise we are not thread-safe. this is super-ugly.
  */
 #ifdef HAM_DEBUG
-#   define ham_trace(f)      do {                                      \
-                                dbg_lock();                            \
-                                dbg_prepare(__FILE__, __LINE__, 0);    \
-                                dbg_log f;                             \
-                                dbg_unlock();                          \
-                             } while (0)
 #   define ham_assert(e, f)  if (!(e)) {                               \
                                 dbg_lock();                            \
-                                dbg_prepare(__FILE__, __LINE__, #e);   \
+                                dbg_prepare(DBG_LVL_FATAL, __FILE__,   \
+                                        __LINE__, #e);   \
                                 dbg_verify_failed f;                   \
                                 dbg_unlock();                          \
                              }
 #else /* !HAM_DEBUG */
-#   define ham_trace(f)      
 #   define ham_assert(e, f)     
 #endif /* HAM_DEBUG */
 
 /**
  * log() and verify() are available in every build
  */
+#define ham_trace(f)         do {                                      \
+                                dbg_lock();                            \
+                                dbg_prepare(DBG_LVL_DEBUG, __FILE__,   \
+                                        __LINE__, 0);    \
+                                dbg_log f;                             \
+                                dbg_unlock();                          \
+                             } while (0)
 #define ham_log(f)           do {                                      \
                                 dbg_lock();                            \
-                                dbg_prepare(__FILE__, __LINE__, 0);    \
+                                dbg_prepare(DBG_LVL_NORMAL, __FILE__,  \
+                                        __LINE__, 0);    \
                                 dbg_log f;                             \
                                 dbg_unlock();                          \
                              } while (0)
 #define ham_verify(e, f)     if (!(e)) {                               \
                                 dbg_lock();                            \
-                                dbg_prepare(__FILE__, __LINE__, #e);   \
+                                dbg_prepare(DBG_LVL_FATAL, __FILE__,   \
+                                        __LINE__, #e);   \
                                 dbg_verify_failed f;                   \
                                 dbg_unlock();                          \
                              }
